--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.3.2",
     "antd": "^5.20.6",
     "antd-style": "^3.7.0",
     "axios": "^1.7.7",
