--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.20.6",
-    "antd-style": "^3.7.0",
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.22.1",
+    "antd-style": "^3.7.1",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
