--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
