--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
