--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
-    "@ant-design/plots": "^2.3.2",
-
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/plots": "^2.3.2",
     "antd": "^5.22.1",
     "antd-style": "^3.7.1",
-
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
