--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd-style": "^3.7.1",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.460.0",
@@ -29,7 +30,9 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "sheetjs-style": "^0.15.8",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
   },
