--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-live-clock": "^6.1.25",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
